--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   },
   "dependencies": {
     "body-parser": "1.6.5",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "1.3.2",
     "debug": "~0.7.4",
     "ejs": "^2.5.2",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.4",
+    "errorhandler": "1.1.1",
+    "express": "4.8.1",
     "jade": "1.5.0",
     "mongoose": "^4.6.6",
-    "morgan": "^1.9.1",
-    "serve-favicon": "^2.5.0"
+    "morgan": "1.2.2",
+    "serve-favicon": "2.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
